# SGA

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  example.cc  gfa2char_gfa.cc  navarro_extend.cc  txt2gfa.cc
benchmark/: CMakeLists.txt  sequence_graph_benchmark.cc
include/sga/: sequence.h  sequence_batch.h  sequence_graph.h  utils.h
src/: CMakeLists.txt
tests/: CMakeLists.txt  test_graph.cc  test_sequence_io.cc
