add_executable(sga_example example.cc)
target_link_libraries(sga_example PRIVATE sga)
add_executable(txt2gfa txt2gfa.cc)
target_link_libraries(txt2gfa PRIVATE sga)
add_executable(gfa2char_gfa gfa2char_gfa.cc)
target_link_libraries(gfa2char_gfa PRIVATE sga)
add_executable(dijkstra_extend dijkstra_extend.cc)
target_link_libraries(dijkstra_extend PRIVATE sga)
add_executable(navarro_extend navarro_extend.cc)
target_link_libraries(navarro_extend PRIVATE sga)
