protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS "${CMAKE_SOURCE_DIR}/extern/vg/vg.proto")
add_library(sga STATIC "${PROTO_SRCS}")
target_compile_features(sga PUBLIC cxx_std_11)
target_compile_options(sga PUBLIC -O3 PUBLIC -Wall)
target_link_libraries(sga "${Protobuf_LIBRARIES}")
if(OpenMP_CXX_FOUND)
  target_link_libraries(sga OpenMP::OpenMP_CXX)
endif()
target_include_directories(sga PUBLIC "${CMAKE_SOURCE_DIR}/include/sga" "${Protobuf_INCLUDE_DIRS}" "${CMAKE_CURRENT_BINARY_DIR}" "${CMAKE_SOURCE_DIR}/extern/klib" "${CMAKE_SOURCE_DIR}/extern/vg")
set_target_properties(sga PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib" LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib" RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
